Changing the size of the main line so we don't get overlap issues

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -155,11 +155,12 @@ a:focus {
     }
 
     .brand-heading {
-        font-size: 100px;
+        font-size: 60px;
     }
 
     .intro-text {
         font-size: 25px;
+        color: #000;
     }
 }
 
